{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 32,
  "lineage": "37ad7b1a-8f2f-c309-0bd5-4ad417522a0a",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "create_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:594123181409:loadbalancer/app/skillup-malcedo-alb/ee81ed98b0948ef9",
            "arn_suffix": "app/skillup-malcedo-alb/ee81ed98b0948ef9",
            "dns_name": "skillup-malcedo-alb-229710025.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:594123181409:loadbalancer/app/skillup-malcedo-alb/ee81ed98b0948ef9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "skillup-malcedo-alb",
            "security_groups": [
              "sg-0c8b200a2e51e56c4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-087ca12dcdd47b870"
              },
              {
                "subnet_id": "subnet-09d329ca591691640"
              }
            ],
            "subnets": [
              "subnet-087ca12dcdd47b870",
              "subnet-09d329ca591691640"
            ],
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-malcedo-alb"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-malcedo-alb"
            },
            "vpc_id": "vpc-0769ef0b8aec75fc3",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "module.alb.aws_security_group.create_albsg",
            "module.vpc.aws_subnet.create_public_sub",
            "module.vpc.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "create_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:594123181409:listener/app/skillup-malcedo-alb/ee81ed98b0948ef9/25b6e5e633a4d081",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:594123181409:targetgroup/skillup-malcedo-tg/5e441a4cb71519b0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:594123181409:listener/app/skillup-malcedo-alb/ee81ed98b0948ef9/25b6e5e633a4d081",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:594123181409:loadbalancer/app/skillup-malcedo-alb/ee81ed98b0948ef9",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_lb.create_alb",
            "module.alb.aws_lb_target_group.create_tg",
            "module.vpc.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "create_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:594123181409:targetgroup/skillup-malcedo-tg/5e441a4cb71519b0",
            "arn_suffix": "targetgroup/skillup-malcedo-tg/5e441a4cb71519b0",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 200,
                "matcher": "200-499",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:594123181409:targetgroup/skillup-malcedo-tg/5e441a4cb71519b0",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "skillup-malcedo-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-malcedo-tg"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-malcedo-tg"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0769ef0b8aec75fc3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "create_albsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:594123181409:security-group/sg-0c8b200a2e51e56c4",
            "description": "security group for malcedo alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c8b200a2e51e56c4",
            "ingress": [
              {
                "cidr_blocks": [
                  "203.126.64.69/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "skillup-malcedo-alb-sg",
            "name_prefix": "",
            "owner_id": "594123181409",
            "revoke_rules_on_delete": false,
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-malcedo-alb-sg"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-malcedo-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0769ef0b8aec75fc3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "create_sg_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "203.126.64.69/32"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-4210079087",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0c8b200a2e51e56c4",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.create_albsg",
            "module.vpc.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.asg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "create_websg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:594123181409:security-group/sg-09a49890fbafe1dc1",
            "description": "security group for malcedo asg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09a49890fbafe1dc1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6522,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04c181226a2d2b88b"
                ],
                "self": false,
                "to_port": 6522
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c8b200a2e51e56c4"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "skillup-malcedo-asg-sg",
            "name_prefix": "",
            "owner_id": "594123181409",
            "revoke_rules_on_delete": false,
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-malcedo-asg-sg"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-malcedo-asg-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0769ef0b8aec75fc3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.asg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "create_web_rule_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 80,
            "id": "sgrule-430405532",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09a49890fbafe1dc1",
            "self": false,
            "source_security_group_id": "sg-0c8b200a2e51e56c4",
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.create_albsg",
            "module.asg.aws_security_group.create_websg",
            "module.vpc.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.asg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "create_web_rule_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "",
            "from_port": 6522,
            "id": "sgrule-3609325703",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09a49890fbafe1dc1",
            "self": false,
            "source_security_group_id": "sg-04c181226a2d2b88b",
            "to_port": 6522,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.asg.aws_security_group.create_websg",
            "module.bastion.aws_security_group.create_bastionsg",
            "module.vpc.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "create_ec2_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05c8486d62efc5d07",
            "arn": "arn:aws:ec2:ap-southeast-1:594123181409:instance/i-05200749459e900a1",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "skillup-malcedo-1b-IAM-S3ReadOnly",
            "id": "i-05200749459e900a1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "skillup-malcedo",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-082b4ccaa6bf73f67",
            "private_dns": "ip-11-0-2-193.ap-southeast-1.compute.internal",
            "private_ip": "11.0.2.193",
            "public_ip": "13.214.156.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ba0674858b63b238",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09d329ca591691640",
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-malcedo-bastion"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-malcedo-bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04c181226a2d2b88b"
            ]
          },
          "dependencies": [
            "module.bastion.aws_security_group.create_bastionsg",
            "module.vpc.aws_subnet.create_public_sub",
            "module.vpc.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "create_bastionsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:594123181409:security-group/sg-04c181226a2d2b88b",
            "description": "security group for skillup-malcedo bastion access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04c181226a2d2b88b",
            "ingress": [
              {
                "cidr_blocks": [
                  "203.126.64.69/32"
                ],
                "description": "",
                "from_port": 6522,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6522
              }
            ],
            "name": "skillup-malcedo-bastion-sg",
            "name_prefix": "",
            "owner_id": "594123181409",
            "revoke_rules_on_delete": false,
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-malcedo-bastion-sg"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-malcedo-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0769ef0b8aec75fc3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "create_sg_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "203.126.64.69/32"
            ],
            "description": "",
            "from_port": 6522,
            "id": "sgrule-3957129335",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04c181226a2d2b88b",
            "self": false,
            "source_security_group_id": null,
            "to_port": 6522,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.bastion.aws_security_group.create_bastionsg",
            "module.vpc.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "create_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:594123181409:internet-gateway/igw-0f43932f3cfb5ae75",
            "id": "igw-0f43932f3cfb5ae75",
            "owner_id": "594123181409",
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-malcedo-igw"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-malcedo-igw"
            },
            "vpc_id": "vpc-0769ef0b8aec75fc3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "create_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a367f676eb040dc9",
            "connectivity_type": "public",
            "id": "nat-0b3e27ce51b810597",
            "network_interface_id": "eni-004fdc87012d53f3a",
            "private_ip": "11.0.1.185",
            "public_ip": "18.139.249.58",
            "subnet_id": "subnet-087ca12dcdd47b870",
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-malcedo-nat"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-malcedo-nat"
            }
          },
          "dependencies": [
            "module.vpc.aws_subnet.create_public_sub",
            "module.vpc.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "create_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:594123181409:route-table/rtb-07f36d21869b68fcf",
            "id": "rtb-07f36d21869b68fcf",
            "owner_id": "594123181409",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b3e27ce51b810597",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-malcedo-private-rt"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-malcedo-private-rt"
            },
            "vpc_id": "vpc-0769ef0b8aec75fc3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_nat_gateway.create_nat",
            "module.vpc.aws_subnet.create_public_sub",
            "module.vpc.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "create_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:594123181409:route-table/rtb-0875918de069ca62e",
            "id": "rtb-0875918de069ca62e",
            "owner_id": "594123181409",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f43932f3cfb5ae75",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-malcedo-public-rt"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-malcedo-public-rt"
            },
            "vpc_id": "vpc-0769ef0b8aec75fc3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.create_igw",
            "module.vpc.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9d16c9ecfa61c89",
            "route_table_id": "rtb-07f36d21869b68fcf",
            "subnet_id": "subnet-0f967c10917fda4d7"
          },
          "dependencies": [
            "module.vpc.aws_nat_gateway.create_nat",
            "module.vpc.aws_route_table.create_private_rt",
            "module.vpc.aws_subnet.create_private_sub",
            "module.vpc.aws_subnet.create_public_sub",
            "module.vpc.aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcd1649adf9402df",
            "route_table_id": "rtb-07f36d21869b68fcf",
            "subnet_id": "subnet-0e2d2d3a0ae23d281"
          },
          "dependencies": [
            "module.vpc.aws_nat_gateway.create_nat",
            "module.vpc.aws_route_table.create_private_rt",
            "module.vpc.aws_subnet.create_private_sub",
            "module.vpc.aws_subnet.create_public_sub",
            "module.vpc.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0813d8c1a0511b2fe",
            "route_table_id": "rtb-0875918de069ca62e",
            "subnet_id": "subnet-087ca12dcdd47b870"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.create_igw",
            "module.vpc.aws_route_table.create_public_rt",
            "module.vpc.aws_subnet.create_public_sub",
            "module.vpc.aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef8e177525b8ec69",
            "route_table_id": "rtb-0875918de069ca62e",
            "subnet_id": "subnet-09d329ca591691640"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.create_igw",
            "module.vpc.aws_route_table.create_public_rt",
            "module.vpc.aws_subnet.create_public_sub",
            "module.vpc.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "create_db_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:594123181409:subnet/subnet-0b8228e8b552edd39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "11.0.5.0/24",
            "id": "subnet-0b8228e8b552edd39",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "594123181409",
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-malcedo-db-1"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-malcedo-db-1"
            },
            "vpc_id": "vpc-0769ef0b8aec75fc3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:594123181409:subnet/subnet-09a87653873d09e1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "11.0.6.0/24",
            "id": "subnet-09a87653873d09e1a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "594123181409",
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-malcedo-db-2"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-malcedo-db-2"
            },
            "vpc_id": "vpc-0769ef0b8aec75fc3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "create_private_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:594123181409:subnet/subnet-0f967c10917fda4d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "11.0.3.0/24",
            "id": "subnet-0f967c10917fda4d7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "594123181409",
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-malcedo-private-1"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-malcedo-private-1"
            },
            "vpc_id": "vpc-0769ef0b8aec75fc3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:594123181409:subnet/subnet-0e2d2d3a0ae23d281",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "11.0.4.0/24",
            "id": "subnet-0e2d2d3a0ae23d281",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "594123181409",
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-malcedo-private-2"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-malcedo-private-2"
            },
            "vpc_id": "vpc-0769ef0b8aec75fc3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "create_public_sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:594123181409:subnet/subnet-087ca12dcdd47b870",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "11.0.1.0/24",
            "id": "subnet-087ca12dcdd47b870",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "594123181409",
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-malcedo-public-1"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-malcedo-public-1"
            },
            "vpc_id": "vpc-0769ef0b8aec75fc3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.create_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:594123181409:subnet/subnet-09d329ca591691640",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "11.0.2.0/24",
            "id": "subnet-09d329ca591691640",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "594123181409",
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-malcedo-public-2"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-malcedo-public-2"
            },
            "vpc_id": "vpc-0769ef0b8aec75fc3"
          },
          "dependencies": [
            "module.vpc.aws_vpc.create_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "create_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:594123181409:vpc/vpc-0769ef0b8aec75fc3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-00a60f9f2ca125e12",
            "default_route_table_id": "rtb-00bcdd42379181fa7",
            "default_security_group_id": "sg-0411f26929dd7bb09",
            "dhcp_options_id": "dopt-edf6e78f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0769ef0b8aec75fc3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00bcdd42379181fa7",
            "owner_id": "594123181409",
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-malcedo-vpc"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-malcedo-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "create_s3endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:594123181409:vpc-endpoint/vpce-00cd79efef3c041e4",
            "cidr_blocks": [
              "52.219.32.0/21",
              "3.5.146.0/23",
              "18.34.248.0/22",
              "3.5.148.0/22",
              "18.34.64.0/21",
              "52.219.40.0/22",
              "52.219.124.0/22",
              "52.219.128.0/21",
              "52.219.184.0/21",
              "16.12.48.0/21",
              "52.219.164.0/22",
              "52.219.180.0/22"
            ],
            "id": "vpce-00cd79efef3c041e4",
            "owner_id": "594123181409",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6fa54006",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-07f36d21869b68fcf",
              "rtb-0875918de069ca62e"
            ],
            "service_name": "com.amazonaws.ap-southeast-1.s3",
            "state": "available",
            "tags": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-malcedo-s3-endpoint"
            },
            "tags_all": {
              "GBL_CLASS_0": "SERVICE",
              "GBL_CLASS_1": "TEST",
              "Name": "skillup-malcedo-s3-endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0769ef0b8aec75fc3"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.create_igw",
            "module.vpc.aws_nat_gateway.create_nat",
            "module.vpc.aws_route_table.create_private_rt",
            "module.vpc.aws_route_table.create_public_rt",
            "module.vpc.aws_subnet.create_public_sub",
            "module.vpc.aws_vpc.create_vpc"
          ]
        }
      ]
    }
  ]
}